--- a/meecrowave/pom.xml
+++ b/meecrowave/pom.xml
@@ -32,7 +32,7 @@
     <name>Kamino :: Blog :: Tutorial :: Meecrowave</name>
 
     <properties>
-        <meecrowave.version>1.2.9</meecrowave.version>
+        <meecrowave.version>1.2.11</meecrowave.version>
         <commons.cli.version>1.4</commons.cli.version>
         <microprofile-config-api.version>1.3</microprofile-config-api.version>
         <geronimo-config.version>1.2.2</geronimo-config.version>
@@ -160,7 +160,7 @@
 
     <build>
         <plugins>
-            <plugin>
+            <plugin><!-- meecrowave:bundle -->
                 <groupId>org.apache.meecrowave</groupId>
                 <artifactId>meecrowave-maven-plugin</artifactId>
                 <version>${meecrowave.version}</version>
@@ -197,10 +197,10 @@
                     </toolProperties>
                 </configuration>
             </plugin>
-            <plugin>
+            <plugin> <!-- mvn compile jib:dockerBuild -->
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>1.8.0</version>
+                <version>3.1.3</version>
                 <configuration>
                     <allowInsecureRegistries>true</allowInsecureRegistries>
                     <from>
@@ -214,7 +214,6 @@
                         </auth>
                     </to>
                     <container>
-                        <useCurrentTimestamp>true</useCurrentTimestamp>
                         <entrypoint>
                             <entrypoint>/meecrowave-distribution/bin/meecrowave.sh</entrypoint>
                             <entrypoint>run</entrypoint>
