--- a/karaf-custom-distribution/pom.xml
+++ b/karaf-custom-distribution/pom.xml
@@ -30,8 +30,9 @@
     <name>Kamino :: Blog :: Tutorial :: Karaf :: Custom distribution</name>
 
     <properties>
-        <karaf.runtime.version>4.4.0</karaf.runtime.version>
-        <decanter.version>2.8.0</decanter.version>
+        <karaf.runtime.version>4.4.3</karaf.runtime.version>
+        <karaf.maven.plugin.version>4.4.3</karaf.maven.plugin.version>
+        <decanter.version>2.9.0</decanter.version>
     </properties>
 
     <dependencies>
@@ -77,7 +78,7 @@
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
                 <artifactId>karaf-maven-plugin</artifactId>
-                <version>4.4.0</version>
+                <version>${karaf.maven.plugin.version}</version>
                 <extensions>false</extensions>
                 <executions>
                     <execution>
